# ChuMicro-Workspace-Template

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  devices.yml  pyproject.toml  quality.toml  requirements.txt  run.py  workspace.yml
.github/skills/add-new-project/: SKILL.md
.github/skills/add-new-thing/: SKILL.md
.github/skills/deploy-and-debug/: SKILL.md
.github/skills/install-firmware/: SKILL.md
.github/skills/register-board/: SKILL.md
.github/workflows/: test.yml
.scratch/: commit-msg-gap4.txt  commit-msg.txt
_templates/: devices.yml  secrets.yml
_workspace_template/: secrets.yml
examples/: README.md
examples/hello_world/: README.md  app.py  project_config.toml
examples/periodic_get/: README.md  app.py  config.toml  project_config.toml
examples/telemetry_publisher/: README.md  app.py  config.toml  project_config.toml
examples/two_board_handshake/: README.md
examples/two_board_handshake/client/: README.md  app.py  project_config.toml
examples/two_board_handshake/server/: README.md  app.py  project_config.toml
examples/two_projects/: README.md
examples/two_projects/sensor/: app.py  config.toml
examples/two_projects/server/: app.py  config.toml
examples/two_things/: README.md
examples/two_things/sensor/: app.py  config.toml
examples/two_things/server/: app.py  config.toml
examples/wifi_only/: README.md  app.py  config.toml  project_config.toml
projects/_template/: app.py  config.toml  project_config.toml
projects/_template/tests/: test_app.py
projects/example_sensor/: app.py  config.toml  project_config.toml
projects/example_sensor/functional_tests/: test_boot_counter.py
projects/example_sensor/tests/: test_app.py
projects/wifi_only/: project_config.toml
shared/: README.md
tests/: test_workspace.py
things/_template/: app.py  config.toml
things/_template/tests/: test_app.py
things/example-sensor/: app.py  config.toml
things/example_sensor/: app.py  config.toml
