# Workspace dependencies + dev tooling.  Tool-owned —
# `chumicro-workspace update` will overwrite it.  If you need extra
# dependencies, add them to a sibling file or extend the dependency
# tree in your fork of the template (then push the fork to git so
# `update --from <fork>` picks them up).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-workspace"
version = "0.1.0"
description = "ChuMicro project workspace."
requires-python = ">=3.11"
dependencies = [
    # Pin chumicro-workspace here so `python run.py setup` can install
    # it editable into the workspace's venv.  The host CLI carries
    # `init` / `update` / `deploy` / `repl` / etc.  Lower bound 0.11.0
    # — that release split the gitignored config into ``workspace.yml``
    # (host-only machinery) + ``secrets.toml`` (workspace-wide
    # credentials + device defaults flowing into runtime_config.msgpack).
    # ``setup`` materialises both starters from the workbench package's
    # payloads.
    "chumicro-workspace>=0.11.0",
]

[project.optional-dependencies]
# `python run.py setup` installs both the runtime and dev extras by
# default.  The split exists so a deploy-only environment (CI runner
# that flashes boards but never runs unit tests) can install just the
# runtime deps with `pip install .` and skip the dev tooling.
dev = [
    # Real-network functional-test plugin.  Auto-registers via
    # ``pytest11`` entry point on `pip install` — no extra config in
    # the workspace's conftest.py needed.  Activates only for paths
    # under ``functional_tests/``.
    "chumicro-pytest-device",
    # Workspace-internal lint rules (CHU0NN codes).  Most rules
    # self-no-op in a typical workspace because they target paths
    # only the chumicro upstream has; the one that fires here is
    # CHU008 (catches stray ADR pointers and mono-repo planning-tree  # noqa: CHU008  rule-description metadata
    # references that leaked into your prose or config).  See the
    # commented ``[tool.chumicro-checks]`` block at the bottom of
    # this file for how to opt out of any rule.
    "chumicro-checks",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["projects"]


# ---------------------------------------------------------------------------
# Test + coverage
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
# Workspace tests live at the root and inside each project.  Functional
# tests sit under each project's ``functional_tests/`` and run only
# when explicitly targeted (the ``chumicro-pytest-device`` plugin
# routes those to a connected board).
testpaths = ["tests", "projects"]

[tool.coverage.run]
branch = true
source = ["projects"]
omit = [
    # Generated runtime config artifacts the deploy pipeline emits.
    "projects/*/_generated/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false


# ---------------------------------------------------------------------------
# Lint
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".venv", "packages", "shared", "projects/*/_generated"]

[tool.ruff.lint]
# pyflakes + import sorting + bugbear + pyupgrade + relative-import
# ban.  Tests get the same style; relative imports are fine in tests
# / examples / functional tests.
select = ["E", "F", "I", "B", "UP", "TID252"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TID252"]
"projects/*/tests/**" = ["TID252"]
"projects/*/functional_tests/**" = ["TID252"]


# ---------------------------------------------------------------------------
# CHU lint rules (chumicro-checks)
# ---------------------------------------------------------------------------
#
# `chumicro-checks` ships workspace-internal lint rules numbered
# CHU0NN.  `python run.py lint` invokes it after ruff finishes (and
# `chumicro-checks` runs standalone too, after `python run.py setup`
# installs the dev extras).
#
# Each rule self-scopes — walks the paths it targets and silently
# no-ops where those paths don't exist — so this workspace's typical
# fire is CHU008 (catches upstream-derivative framing like leftover
# ADR-number pointers and command-runner references that don't  # noqa: CHU008  rule-description metadata
# belong in a workspace).  Rules that target ``libraries/<name>/``
# scaffolding fire automatically the first time a library is
# scaffolded; rules that target ``plans/`` fire automatically when
# a planning tree is added.
#
# CHU007 is the one rule that genuinely doesn't apply here — it
# enforces the chumicro upstream's library-vs-workbench split,
# which a workspace cloned from this template doesn't have.  Listed
# in `ignore` below so the intent is explicit; without the entry,
# CHU007 still self-no-ops because there's no `workbench/` tree to
# walk.
#
# Run `chumicro-checks --list` for every code + what it catches.
# Add more codes to `ignore` to opt out of any rule.

[tool.chumicro-checks]
ignore = ["CHU007"]
