# Workspace dependencies + dev tooling.  Tool-owned:
# `chumicro-workspace update` will overwrite it.  If you need extra
# dependencies, add them to a sibling file or extend the dependency
# tree in your fork of the template (then push the fork to git so
# `update --from <fork>` picks them up).

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-workspace"
version = "0.1.0"
description = "ChuMicro project workspace."
requires-python = ">=3.11"
# The chumicro tooling a workspace runs (chumicro-workspace, -repl,
# -pytest-device, -checks) lives in requirements.txt, not here: a plain
# one-per-line manifest `run.py setup` installs in regular mode.
# Host-side dependencies of your own can go in this array, with the
# caveat in the header: `update` rewrites this file, so after an update
# re-apply your additions from `git diff`, or keep them in a fork and
# point `update --from <fork>` at it.  (Device-side packages don't
# belong here at all; drop their source under packages/.)
dependencies = []

[project.optional-dependencies]
# `python3 run.py setup` installs this `dev` extra alongside the workspace
# package so `run.py lint` / `run.py test` have their third-party tools.
# The chumicro dev tooling (pytest-device, checks) is in requirements.txt;
# only non-chumicro tools live here.  A deploy-only environment (a CI
# runner that flashes boards but never runs unit tests) can `pip install .`
# and skip this extra.
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["projects"]


# ---------------------------------------------------------------------------
# Test + coverage
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
# import-mode=importlib lets every project keep the scaffold's
# tests/test_app.py basename: without it, a second project's test_app.py
# collides with the first under pytest's default prepend import (same
# module name, no package __init__.py) and `run.py test` aborts collection.
addopts = "-ra --strict-markers --import-mode=importlib"
# Workspace tests live at the root and inside each project.  Functional
# tests sit under each project's ``functional_tests/`` and run only
# when explicitly targeted (the ``chumicro-pytest-device`` plugin
# routes those to a connected board).
testpaths = ["tests", "projects"]

[tool.coverage.run]
branch = true
source = ["projects"]
omit = [
    # Generated runtime config artifacts the deploy pipeline emits.
    "projects/*/_generated/*",
]

[tool.coverage.report]
fail_under = 85
show_missing = true
skip_covered = false


# ---------------------------------------------------------------------------
# Lint
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
# `libraries/` is excluded like `packages/` and `shared/`: library
# source acquired by `library add` follows its own upstream style
# (line-length 110), and a library you scaffold with `new --library`
# carries its own pyproject + gates.  Linting either against the
# workspace's stricter knobs turns `run.py lint` red on code you
# don't own here.  `_library-backups/` holds `library update`'s
# pre-upgrade copies of those same trees, so it gets the same pass.
extend-exclude = [".venv", "libraries", "packages", "shared", "projects/*/_generated", "_library-backups"]

[tool.ruff.lint]
# pyflakes + import sorting + bugbear + pyupgrade + relative-import
# ban.  Tests get the same style; relative imports are fine in tests
# / examples / functional tests.
select = ["E", "F", "I", "B", "UP", "TID252"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["TID252"]
"projects/*/tests/**" = ["TID252"]
"projects/*/functional_tests/**" = ["TID252"]


# ---------------------------------------------------------------------------
# CHU lint rules (chumicro-checks)
# ---------------------------------------------------------------------------
#
# `chumicro-checks` ships workspace-internal lint rules numbered
# CHU0NN.  `python3 run.py lint` invokes it after ruff finishes (and
# `chumicro-checks` runs standalone too, after `python3 run.py setup`
# installs the dev extras).
#
# Each rule self-scopes (walks the paths it targets and silently
# no-ops where those paths don't exist), so this workspace's typical
# fire is CHU008 (catches upstream-derivative framing like leftover
# ADR-number pointers and command-runner references that don't  # noqa: CHU008  rule-description metadata
# belong in a workspace).  Rules that target ``libraries/<name>/``
# scaffolding fire automatically the first time a library is
# scaffolded; rules that target ``plans/`` fire automatically when
# a planning tree is added.
#
# CHU007 is the one rule that genuinely doesn't apply here.  It
# enforces the chumicro upstream's library-vs-workbench split,
# which a workspace cloned from this template doesn't have.  Listed
# in `ignore` below so the intent is explicit; without the entry,
# CHU007 still self-no-ops because there's no `workbench/` tree to
# walk.
#
# Run `chumicro-checks --list` for every code + what it catches.
# Add more codes to `ignore` to opt out of any rule.

[tool.chumicro-checks]
ignore = ["CHU007"]
